--- a/jirable/print.html
+++ b/jirable/print.html
@@ -2,10 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <!-- vuetify -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/vuetify@1.5.14/dist/vuetify.min.css" rel="stylesheet">
+
+    <!-- development -->
+    <!-- <link href="./jirable.css" type="text/css" rel="stylesheet"> -->
+
+    <!-- production -->
     <link href="https://raw.githack.com/dieuph/scripting/master/jirable/jirable.min.css" type="text/css" rel="stylesheet">
+    
     <title>jirable</title>
 </head>
 <body>
@@ -21,8 +29,14 @@
             </v-content>
         </v-app>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vuetify@1.5.14/dist/vuetify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.x/dist/vue.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
+
+    <!-- development -->
+    <!-- <script src="./data.js"></script>
+    <script src="./jirable.js"></script> -->
+
+    <!-- production -->
     <script src="https://raw.githack.com/dieuph/scripting/master/jirable/jirable.min.js"></script>
 </body>
 </html>
