--- a/jirable/print.html
+++ b/jirable/print.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="http://www.iconarchive.com/download/i85607/graphicloads/100-flat/print.ico">
+    <link rel="shortcut icon" href="https://cdn3.iconfinder.com/data/icons/object-emoji/50/Printer-512.png">
     <!-- vuetify -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
