fix print sub-tab and goal icon

--- a/jirable/print.html
+++ b/jirable/print.html
@@ -34,8 +34,10 @@
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
     
     <!-- development -->
-    <!-- <script src="./data.js"></script>
-    <script src="./jirable.js"></script> -->
+    <!--
+    <script src="./data.js"></script>
+    <script src="./jirable.js"></script>
+    -->
 
     <!-- production -->
     <script src="https://raw.githack.com/dieuph/scripting/master/jirable/jirable.min.js"></script>
