--- a/jirable/print.html
+++ b/jirable/print.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
 
     <!-- development -->
-    <!-- <link href="./jirable.css" type="text/css" rel="stylesheet"> -->
+    <!-- <link href="./jirable.css" type="text/css" rel="stylesheet">-->
 
     <!-- production -->
     <link href="https://raw.githack.com/dieuph/scripting/master/jirable/jirable.min.css" type="text/css" rel="stylesheet">
@@ -39,7 +39,11 @@
     <script src="./jirable.js"></script>
     -->
 
+
     <!-- production -->
+    <!--
     <script src="https://raw.githack.com/dieuph/scripting/master/jirable/jirable.min.js"></script>
+    -->
+    <link href="https://rawcdn.githack.com/dieuph/scripting/787f2b3469fd4b1a138edcc6d24610d9f8405229/jirable/jirable.min.js" type="text/css">
 </body>
 </html>
